Added more UI components

--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
 </head>
 <body>
     <div class="calculator">
+        <div class="calc_head">
+            <div class="calc_title">#CRUNCHER-8008</div>
+            <div class="solar_tab">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
         <div class="display">0</div>
         <div class="buttons">
             <button class="btn">7</button>
             <button class="btn">8</button>
             <button class="btn">9</button>
-            <button class="btn operator">/</button>
+            <button class="btn operator">&#247;</button>
             <button class="btn">4</button>
             <button class="btn">5</button>
             <button class="btn">6</button>
@@ -27,6 +36,10 @@
             <button class="btn">.</button>
             <button class="btn">=</button>
             <button class="btn operator">+</button>
+            <button class="btn delete">C</button>
+            <button class="btn delete">CE</button>
+            <button class="btn operator">X<sup>2</sup></button>
+            <button class="btn operator">&#8730;</button>
         </div>
     </div>
 </body>
