--- a/index.html
+++ b/index.html
@@ -18,28 +18,29 @@
                 <div></div>
             </div>
         </div>
-        <div class="display">0</div>
+        <div class="display">
+            <div class="previous_number" data-previous-operand></div>
+            <div class="current_number" data-current-operand>0</div>
+        </div>
         <div class="buttons">
-            <button class="btn">7</button>
-            <button class="btn">8</button>
-            <button class="btn">9</button>
-            <button class="btn operator">&#247;</button>
-            <button class="btn">4</button>
-            <button class="btn">5</button>
-            <button class="btn">6</button>
-            <button class="btn operator">*</button>
-            <button class="btn">1</button>
-            <button class="btn">2</button>
-            <button class="btn">3</button>
-            <button class="btn operator">-</button>
-            <button class="btn">0</button>
-            <button class="btn">.</button>
-            <button class="btn">=</button>
-            <button class="btn operator">+</button>
-            <button class="btn delete">C</button>
-            <button class="btn delete">CE</button>
-            <button class="btn operator">X<sup>2</sup></button>
-            <button class="btn operator">&#8730;</button>
+            <button class="btn" data-number>7</button>
+            <button class="btn" data-number>8</button>
+            <button class="btn" data-number>9</button>
+            <button class="btn operator" data-operator>/</button>
+            <button class="btn" data-number>4</button>
+            <button class="btn" data-number>5</button>
+            <button class="btn" data-number>6</button>
+            <button class="btn operator" data-operator>*</button>
+            <button class="btn" data-number>1</button>
+            <button class="btn" data-number>2</button>
+            <button class="btn" data-number>3</button>
+            <button class="btn operator" data-operator>-</button>
+            <button class="btn" data-number>0</button>
+            <button class="btn" data-dot>.</button>
+            <button class="btn" data-assign>=</button>
+            <button class="btn operator" data-operator>+</button>
+            <button class="btn delete" data-delete>C</button>
+            <button class="btn delete" data-clear-all>CE</button>
         </div>
     </div>
 </body>
