Added minor UI changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="calculator">
         <div class="calc_head">
-            <div class="calc_title">#CRUNCHER-8008</div>
+            <div class="calc_title">The Terrence Howard Calculator THX-1000</div>
             <div class="solar_tab">
                 <div></div>
                 <div></div>
@@ -20,7 +20,7 @@
         </div>
         <div class="display">
             <div class="previous_number" data-previous-operand></div>
-            <div class="current_number" data-current-operand>0</div>
+            <div class="current_number" data-current-operand>1 * 1 = 2</div>
         </div>
         <div class="buttons">
             <button class="btn" data-number>7</button>
