--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@
             <button class="btn delete" data-clear-all>CE</button>
         </div>
     </div>
+    <div class="creator">Hugo Angel &copy; 2025</div>
 </body>
 </html>
