--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <button class="btn" data-dot>.</button>
             <button class="btn" data-assign>=</button>
             <button class="btn operator" data-operator>+</button>
-            <button class="btn delete" data-delete>C</button>
-            <button class="btn delete" data-clear-all>CE</button>
+            <button class="btn delete" data-delete>CE</button>
+            <button class="btn delete" data-clear-all>AC</button>
         </div>
     </div>
     <div class="creator">Hugo Angel &copy; 2025</div>
